[package]
name = "websocket-tonic"
version = "0.1.0"
edition = "2021"

[dependencies]
tonic = "0.9.2"
prost = "0.11.9"
tokio = { version = "1.28.2", features = ["full"] }
tokio-stream = "0.1.14"
futures-util = "0.3.28"
tokio-tungstenite = "0.19.0"
http = "0.2.9"
tower = "0.4.13"
tower-http = { version = "0.4.0", features = ["cors"] }
tonic-web = "0.9.2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
async-stream = "0.3.5"
chrono = "0.4.41"

[build-dependencies]
tonic-build = "0.9.2"

[[bin]]
name = "server"
path = "src/server.rs"

[[bin]]
name = "websocket_bridge"
path = "src/websocket_bridge.rs"

[[bin]]
name = "client"
path = "src/client.rs"
